--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@fortawesome/fontawesome-svg-core": "^6.4.0",
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@tanstack/react-query": "^4.29.13",
     "daisyui": "^2.51.6",
     "firebase": "^9.22.0",
     "html2canvas": "^1.4.1",
@@ -23,7 +24,9 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.11.2",
     "react-tabs": "^6.0.1",
-    "sort-by": "^1.2.0"
+    "sort-by": "^1.2.0",
+    "sweetalert": "^2.1.2",
+    "sweetalert2": "^11.7.12"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
