--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "dolls-house-client",
+  "name": "dolls-drawing-school-client",
   "private": true,
   "version": "0.0.0",
   "type": "module",
